--- a/src/components/MovieCard.module.css
+++ b/src/components/MovieCard.module.css
@@ -3,6 +3,12 @@
   font-size: 1.5rem;
   text-align: center;
 }
+.movieTitle {
+  font-family: "Arial", sans-serif; /* Ajusta la fuente según tus preferencias */
+  color: black; /* Cambia el color de las letras a negro */
+  font-size: 1.2rem; /* Ajusta el tamaño de la fuente según tus preferencias */
+}
+
 
 .movieCard:hover {
   opacity: 0.8;
@@ -10,7 +16,7 @@
 
 .movieImage {
   border-radius: 10px;
-  background-color: azure;
+  background-color: rgb(0, 153, 153);
 }
 
 @media (max-width: 560px) {
