--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,43 +1,129 @@
-.bannerContainer {
-  width: 100%;
-  height: 220px; /* Ajusta la altura del banner según tu preferencia */
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  font-family: 'Bebas Neue', sans-serif;
+}
+
+.logoContainer {
+  flex: 1;
+}
+
+.logotipo {
+  font-size: 50px;
+  font-weight: bold;
+  color: red;
+}
+
+
+.navbar {
+  display: flex;
+}
+
+.navButton {
+  margin-right: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #000000;
+  text-decoration: none;
   position: relative;
+  transition: color 0.3s ease-in-out;
+}
+
+.navButton::before {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #252525;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.navButton:hover {
+  color: #fc0404;
+}
+
+.navButton:hover::before {
+  transform: scaleX(1);
+}
+
+.navButton.active {
+  color: #ff0000;
+}
+
+.navButton.active::before {
+  transform: scaleX(1);
+}
+
+
+.heroContainer {
+  position: relative;
+  height: 487px;
   overflow: hidden;
 }
 
-.bannerImage {
+.heroContent {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+  z-index: 1;
+}
+
+.titulo {
+  font-size: 70px;
+  font-weight: bold;
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.descripcion {
+  font-size: 20px;
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.boton {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #333;
+  border: none;
+  border-radius: 4px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.boton i {
+  margin-right: 5px;
+}
+
+.backdropImage {
   width: 100%;
   height: auto;
   object-fit: cover;
 }
 
-.buttonContainer {
-  display: flex;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.7); /* Ajusta el color de fondo del contenedor de botones */
+/* Estilos adicionales para LandingPage.js */
+.pageContent {
+  padding: 20px;
 }
 
-.navButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 1;
-  padding: 10px;
-  color: white;
-  font-size: 16px; /* Ajusta el tamaño de la fuente según tu preferencia */
-  text-decoration: none;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.3s;
+.tituloPrincipal {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 20px;
 }
 
-.navButton:hover {
-  background-color: rgba(255, 255, 255, 0.2); /* Ajusta el color de fondo al pasar el cursor sobre los botones */
-}
-
-.navButton:not(:last-child) {
-  border-right: 1px solid white; /* Agrega una línea separadora entre los botones */
+.parrafoPrincipal {
+  font-size: 18px;
+  color: #555;
+  margin-bottom: 20px;
 }
