--- a/src/Contacto.module.css
+++ b/src/Contacto.module.css
@@ -1,32 +1,66 @@
-.contactoContainer {
-    text-align: center;
-    padding: 20px;
-  }
-  
-  .contactoContainer h1 {
-    font-size: 24px;
-    color: #050505;
-  }
-  
-  .contactoContainer p {
-    font-size: 18px;
-    color: #0a0a0a;
-    margin-bottom: 20px;
-  }
-  
-  .contactoContainer ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .contactoContainer li {
-    font-size: 16px;
-    color: #020202;
-    margin-bottom: 10px;
-  }
-  
-  .contactoContainer .socialLink {
-    color: #007bff;
-    margin-right: 10px;
-  }
-  
+.contacto {
+  background-color: #1f1f1f;
+  color: #fff;
+  padding: 20px;
+  font-family: 'Bebas Neue', sans-serif;
+}
+
+.contacto h2 {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
+.contacto form {
+  margin-bottom: 20px;
+}
+
+.contacto label {
+  display: block;
+  font-size: 35px;
+  margin-bottom: 10px;
+}
+
+.contacto input,
+.contacto textarea {
+  background-color: #292929;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.contacto textarea {
+  resize: vertical;
+  min-height: 100px;
+}
+
+.contacto button {
+  background-color: #ff6f00;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 35px;
+  padding: 10px 20px;
+}
+
+.contacto button:hover {
+  background-color: #ff8c00;
+}
+
+.contacto ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.contacto li {
+  font-size: 35px;
+  margin-bottom: 10px;
+}
+
+.contacto li strong {
+  font-weight: bold;
+}
