--- a/src/SobreNosotros.module.css
+++ b/src/SobreNosotros.module.css
@@ -1,17 +1,56 @@
-.title {
-    font-size: 24px;
-    font-weight: bold;
-    text-align: center;
-    /* Agrega otros estilos de fuente según tus preferencias */
-  }
-  
-  .imageContainer {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .image {
-    max-width: 100%;
-    height: auto;
-  }
-  
+/* SobreNosotros.module.css */
+
+.cabecera {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url("./fondo.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.presentacion {
+  text-align: center;
+  color: #fff;
+  padding: 20px;
+}
+
+.presentacion h1 {
+  font-size: 66px;
+  line-height: 1.2;
+  margin-bottom: 10px;
+}
+
+.presentacion h2 {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.presentacion input[type="email"] {
+  padding: 14px 16px; /* Aumenta el espacio interno del campo de entrada */
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  font-size: 30px; /* Aumenta el tamaño de la fuente */
+}
+
+.presentacion button[type="submit"] {
+  display: inline-block;
+  background-color: #e50914;
+  color: #fff;
+  padding: 14px 24px; /* Aumenta el espacio interno del botón */
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 30px; /* Aumenta el tamaño de la fuente */
+}
+
+.presentacion h3 {
+  font-size: 16px;
+}
+
+.fondo {
+  display: none;
+}
